--- a/default.hbs
+++ b/default.hbs
@@ -51,9 +51,10 @@
         </span>
 
         <span>
-         &nbsp;&bull;&nbsp;
-         Proudly published with
-          <a href="https://ghost.org"><span class="icon-ghost typl8-zeta"></span><span class="hidden">Ghost</span></a>             </span>
+         	&nbsp;&bull;&nbsp;
+		 	Proudly published with
+		 	<a href="https://ghost.org"><span class="icon-ghost typl8-zeta"></span><span class="hidden">Ghost</span></a>             
+        </span>
       </section>
     </footer>
 
@@ -67,13 +68,6 @@
 
     <!-- Ghost outputs important scripts and data with this tag -->
     {{ghost_foot}}
-
-    <!--
-    This loads katex.hbs in; if a page has anything with the class .math, katex.hbs           loads Khan Academy’s Tex math typesetting library and runs it on the content.
-
-    If you don’t want to use KaTeX, comment this out.
-    -->
-    {{>katex}}
 
     <script>
       var cb = function() {
