--- a/tag.hbs
+++ b/tag.hbs
@@ -4,8 +4,14 @@
 {{>content-header}}
 
 <header class="main-header tag-head inner ">
-  <h1 class="page-title typl8-beta ">{{tag.name}}</h1>
-  <h2 class="page-description typl8-delta">A {{pagination.total}}-post collection</h2>
+  <h1 class="page-title typl8-beta ">Tag: {{tag.name}}</h1>
+  <h2 class="page-description typl8-delta">
+    {{#if tag.description}}
+        {{tag.description}}
+    {{else}}
+        A {{pagination.total}}-post collection
+    {{/if}}
+  </h2>
   <br>
   <a class="icon-feed tdn" href="{{@blog.url}}/tag/{{tag.slug}}/rss/"> RSS</a>               <em>feed of posts tagged <strong>{{tag.name}}</strong></em>
 </header>
