--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -186,31 +186,31 @@ strong, bold, b{
    than indent. */
 
 
-.post-content > p + p,
-.post-content .thumb + p,
-.post-content aside + p{
-  text-indent:1.65em;
-}
+/* .post-content > p + p, */
+/* .post-content .thumb + p, */
+/* .post-content aside + p{ */
+/*   text-indent:1.65em; */
+/* } */
 
-.post-content p{
-  margin-bottom:0em;
-  -webkit-margin-after: 0em;
-}
+/* .post-content p{ */
+/*   margin-bottom:0em; */
+/*   -webkit-margin-after: 0em; */
+/* } */
 
 
-.post-content h1,
-.post-content h2,
-.post-content h3{
-  margin-top: 2.857rem;
-  margin-bottom: 1.65rem;
-}
+/* .post-content h1, */
+/* .post-content h2, */
+/* .post-content h3{ */
+/*   margin-top: 2.857rem; */
+/*   margin-bottom: 1.65rem; */
+/* } */
 
-.post-content h4,
-.post-content h5,
-.post-content h6{
-  margin-top: 3.3rem;
-  margin-bottom: 1.1rem;
-}
+/* .post-content h4, */
+/* .post-content h5, */
+/* .post-content h6{ */
+/*   margin-top: 3.3rem; */
+/*   margin-bottom: 1.1rem; */
+/* } */
 
 
 /* END OF TRADITIONAL PARAGRAPH STYLES*/
